--- a/articulo.html
+++ b/articulo.html
@@ -4,7 +4,15 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Aquí vamos a hacer un blog post</h1>
-        <p>Y este es el párrafo de inicio</p>
+        <div id="container">
+            <div>
+                <h1>Este es el título atractivo</h1>
+                <p>
+                    Y este es el párrafor de inicio donde 
+                    vamos a explicar lo que se puede hacer 
+                    con ramas
+                </p>
+            </div>
+        </div>
     </body>
 </html>
